<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.UserDetail">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/tv_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        tools:src="@tools:sample/avatars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_icon"
        app:layout_constraintStart_toStartOf="@+id/tv_icon"
        app:layout_constraintTop_toBottomOf="@+id/tv_icon"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/tv_username_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_name_detail"
        app:layout_constraintStart_toStartOf="@+id/tv_name_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_detail"
        tools:text="@string/username" />


    <TextView
        android:id="@+id/tv_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_username_detail"
        app:layout_constraintStart_toStartOf="@+id/tv_username_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_username_detail"
        tools:text="@string/company" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_company"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@+id/tv_company"
        app:layout_constraintTop_toBottomOf="@+id/tv_company"
        tools:text="@string/location" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"

        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/tv_icon"
        app:layout_constraintStart_toStartOf="@+id/tv_icon"
        app:layout_constraintTop_toBottomOf="@+id/tv_username_detail">

        <TextView
            android:id="@+id/tv_folls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_baseline_people_outline_24dp"
            tools:text="@string/followers" />

        <TextView
            android:id="@+id/tv_mutual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_baseline_people_outline_24dp"
            tools:text="@string/following" />

        <TextView
            android:id="@+id/tv_repos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_repository"
            tools:text="@string/repository" />

    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        style="@style/tab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>